codex-rs/core/tests/suite/snapshots/all__suite__compact__manual_compact_with_history_shapes.snap
---
source: core/tests/suite/compact.rs
assertion_line: 4232
expression: "format_history_snapshot(\"Manual /compact with prior user history compacts existing history and the follow-up turn includes the compact summary plus new user message.\",\n&requests)"
---
Scenario: Manual /compact with prior user history compacts existing history and the follow-up turn includes the compact summary plus new user message.

## Window 1
-- request 1 (turn) --
00:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    first manual turn
-- request 2 (compaction) --
03:message/assistant:
    FIRST_REPLY
04:message/user:
    <SUMMARIZATION_PROMPT>

## Window 2 (after request 2: input diverged at item 00)
-- request 3 (turn) --
00:message/user:
    first manual turn
01:message/user:
    <COMPACTION_SUMMARY>
    FIRST_MANUAL_SUMMARY
02:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
03:message/user:
    <ENVIRONMENT_CONTEXT>
04:message/user:
    second manual turn
-- request 4 (compaction) --
05:message/assistant:
    SECOND_LARGE_REPLY
06:message/user:
    <SUMMARIZATION_PROMPT>

## Window 3 (after request 4: input diverged at item 01)
-- request 5 (turn) --
00:message/user:
    first manual turn
01:message/user:
    second manual turn
02:message/user:
    <COMPACTION_SUMMARY>
    SECOND_MANUAL_SUMMARY
03:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
04:message/user:
    <ENVIRONMENT_CONTEXT>
05:message/user:
    post compact follow-up
